[package]
name = "random-number-macro-impl"
version = "0.1.5"
authors = ["Magic Len <len@magiclen.org>"]
edition = "2018"
repository = "https://github.com/magiclen/random-number"
homepage = "https://magiclen.org/random-number"
keywords = ["random", "integer", "number", "inclusive", "fill"]
categories = ["rust-patterns"]
description = "Generate random numbers quickly."
readme = "README.md"
license = "MIT"
include = ["src/**/*", "Cargo.toml", "README.md", "LICENSE"]

[lib]
proc_macro = true

[dependencies]
proc-macro-hack = "0.5"
syn = { version = "1", features = ["full"] }
quote = "1"