[package]
name = "random-number"
version = "0.1.3"
authors = ["Magic Len <len@magiclen.org>"]
edition = "2018"
repository = "https://github.com/magiclen/random-number"
homepage = "https://magiclen.org/random-number"
keywords = ["random", "integer", "number", "inclusive", "fill"]
categories = ["no-std", "rust-patterns"]
description = "Generate random numbers quickly."
readme = "README.md"
license = "MIT"
include = ["src/**/*", "Cargo.toml", "README.md", "LICENSE"]

[badges.travis-ci]
repository = "magiclen/random-number"
branch = "master"

[dependencies]
random-number-macro-impl = { version = "0.1", path = "../random-number-macro-impl" }

proc-macro-hack = "0.5"
rand = "0.7"